# airflow-snowpark-demo

./: .env  Dockerfile  README.md  requirements-snowpark.txt  requirements.txt
dags/: snowpark_demo.py
include/: pyproject.toml
include/astronomer/providers/snowflake/: __init__.py
include/astronomer/providers/snowflake/decorators/: __init__.py  snowpark.py
include/astronomer/providers/snowflake/operators/: snowpark.py  snowpark_virtualenv_script.jinja2
include/astronomer/providers/snowflake/utils/: xcom_helpers.py
include/astronomer/providers/snowflake/xcom_backends/: snowflake.py
include/provider/astronomer/providers/snowflake/: __init__.py
include/provider/astronomer/providers/snowflake/decorators/: __init__.py  snowpark.py
include/provider/astronomer/providers/snowflake/operators/: snowpark.py  snowpark_virtualenv_script.jinja2
include/provider/astronomer/providers/snowflake/xcom_backends/: snowflake.py
include/utils/: cloud_ide_cct_snowpark_ext_python.json  cloud_ide_cct_snowpark_python.json  cloud_ide_cct_snowpark_python_venv.json  snowflake_xcom_backend.py
