[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-provider-snowpark"
authors = [
    {name = "Michael Gregory", email = "michael.gregory@astronomer.io"},
]
license = {text = "Apache License 2.0"}
description = "Scalable and Secure Snowflake Workflows in Apache Airflow"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
urls = {Source = "https://github.com/astronomer/astro-provider-snowpark"}
dynamic = ["version"]
requires-python = "~=3.7"
dependencies = [
    "aiohttp>=3.8.4",
    "snowflake-connector-python[pandas]>=3.0.4",
    "numpy>=1.23",
    "apache-airflow-providers-snowflake>=4.1.0",
    "attrs>=23.0.0",
]

[project.optional-dependencies]
docker = [
    "docker-compose>=1.29.2"
]
tests = [
    "pytest>=7.0",
]

#[project.readme]
#file = "README.md"
#content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "astronomer.providers.snowflake:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"astronomer.providers.snowflake.operators" = ["*.jinja2"]

[tool.setuptools.dynamic]
version = {attr = "astronomer.providers.snowflake.__version__"}

[tool.setuptools.packages.find]
where = ["provider"]

[tool.ruff]
fix = true
line-length = 110
target-version = "py37"
extend-select = [
    "PGH", #pygrep-hooks
    "UP", # Pyupgrade
    "RUF100", # Unused noqa (auto-fixable)
    "I",
]

[tool.pytest.ini_options]
addopts = "--tb=short -v"
filterwarnings = [
    "ignore::DeprecationWarning:apispec.utils",
    "ignore::DeprecationWarning:connexion.decorators.validation",
    "ignore::DeprecationWarning:marshmallow_sqlalchemy.convert",
    "ignore::DeprecationWarning:flask_sqlalchemy",
    "ignore::DeprecationWarning:flask_appbuilder.filemanager",
    "ignore::DeprecationWarning:flask_appbuilder.widgets",
    "ignore::DeprecationWarning:pkg_resources",
]